# agent_bmm

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  plugins.json  pyproject.toml
.github/workflows/: ci.yml
agent_bmm/: __init__.py  agent.py  auth.py  cli.py  config.py  config_schema.py  metrics.py  persistence.py  plugins.py  sandbox.py  security.py  server.py  telemetry.py  templates.py  workflow.py
agent_bmm/coder/: __init__.py  chat.py  context.py  cost.py  engine.py  export.py  lsp.py  permissions.py  session_memory.py  summarizer.py
agent_bmm/config/: completions.py  config.py
agent_bmm/core/: __init__.py  branching.py  cache.py  chain.py  debate.py  embedding_router.py  logging.py  multi_agent.py  pipeline.py  quantized_router.py  reflection.py  retry.py  router.py  streaming.py  themes.py  triton_bmm.py  watcher.py
agent_bmm/llm/: __init__.py  auto_detect.py  backend.py  fallback.py  model_router.py  rate_limiter.py
agent_bmm/memory/: __init__.py  context.py  faiss_store.py
agent_bmm/plugins/: plugins.py  templates.py
agent_bmm/rag/: __init__.py  retriever.py  smart_context.py
agent_bmm/security/: audit.py  policies.py  sandbox.py  security.py
agent_bmm/server/: client.py  remote.py  server.py
agent_bmm/tools/: __init__.py  registry.py
agent_bmm/tools/builtin/: __init__.py  api.py  audio.py  browser.py  code_exec.py  docker.py  file_io.py  github.py  image.py  math_tool.py  slack.py  sql.py  web_search.py
agent_bmm/utils/: decorators.py  tracing.py
benchmarks/: bench_bmm_vs_sequential.py  bench_gpu_profiling.py  bench_steps_per_task.py
examples/: code_audit.yaml  quickstart.py  stock_report.yaml  vllm_guide.py  web_research.yaml
tests/: test_integration.py  test_persistence.py  test_retry.py  test_router.py  test_sandbox.py  test_security.py  test_telemetry.py  test_tools.py
