[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "agent-bmm"
version = "0.1.0"
description = "GPU-accelerated agent framework with Batched Matrix Multiply dispatch"
license = "CC-BY-NC-4.0"
requires-python = ">=3.10"
authors = [
    {name = "INL Dynamics / Complexity-ML"},
]

dependencies = [
    # Tier 1 — Core
    "torch>=2.0",
    "tokenizers>=0.15",
    "aiohttp>=3.9",
    "pydantic>=2.0",

    # Tier 2 — Performance
    "triton>=2.1",
    "faiss-gpu>=1.7",
    "uvloop>=0.19",
    "orjson>=3.9",

    # Tier 3 — Features
    "sentence-transformers>=2.2",
    "safetensors>=0.4",
    "torchvision>=0.15",
    "torchaudio>=2.0",
    "numpy>=1.24",

    # Tier 4 — DX
    "rich>=13.0",
    "websockets>=12.0",
]

[project.scripts]
agent-bmm = "agent_bmm.cli:main"

[project.optional-dependencies]
browser = [
    "playwright>=1.40",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]
